eks-cluster/k8s/webapp.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-tasky
  namespace: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: tasky
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tasky
    spec:
      serviceAccountName: webapp-serviceaccount
      containers:
        - name: tasky
          image: thedarksec/mongoauth-webapp:latest
          imagePullPolicy: "Always"
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: web-app
spec:
  selector:
    app.kubernetes.io/name: tasky  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort            
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web-app
  name: ingress-web-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tasky-service
              port:
                number: 8080
